--- a/src/PageHeader/PageHeader.module.css
+++ b/src/PageHeader/PageHeader.module.css
@@ -3,16 +3,16 @@
   position: relative;
   justify-content: center;
   align-items: center;
-  padding-bottom: 2%;
 }
-
+/* 
 .Container hr {
   position: absolute;
   left: 0;
   width: 120px;
   border: 1px solid #000000;
-}
+} */
 
 .Container h1 {
   color: #000000;
+  padding: 0 20px;
 }
