--- a/src/Home/Home.module.css
+++ b/src/Home/Home.module.css
@@ -1,6 +1,6 @@
 .Home {
   background-color: #e5e3dc;
-  height: 500px;
+  /* height: 100px; */
   padding-top: 80px;
   text-align: center;
 }
@@ -9,10 +9,7 @@
   padding: 0 20px;
 }
 
-.Home .Container h1 {
-  margin: 0;
-}
-
 .Home img {
+  width: 40px;
   padding-left: 10px;
 }
