--- a/src/Home/Home.module.css
+++ b/src/Home/Home.module.css
@@ -1,6 +1,5 @@
-.Home {
+/* .Home {
   background-color: #e5e3dc;
-  /* height: 100px; */
   padding-top: 80px;
   text-align: center;
 }
@@ -12,4 +11,4 @@
 .Home img {
   width: 40px;
   padding-left: 10px;
-}
+} */
