--- a/src/Work/Work.module.css
+++ b/src/Work/Work.module.css
@@ -1,7 +1,3 @@
-.Work {
-  background-color: #dbd8cc;
-}
-
 .Work .Container {
   padding: 0 20px;
 }
@@ -10,18 +6,6 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-}
-
-.PhotoSale {
-  background-color: #ffe78c;
-}
-
-.OtherWorks {
-  background-color: #b2ffc3;
-}
-
-.CatPhoto {
-  background-color: #aed4ff;
 }
 
 .PhotoSale,
@@ -33,28 +17,50 @@
   align-items: center;
   flex-wrap: wrap;
   justify-content: space-between;
+  background-color: #e5e3dc;
 }
 
 .PhotoSale img,
 .CatPhoto img,
 .OtherWorks img {
   width: 25%;
+  padding: 15px 15px 15px 0;
 }
 
 .PhotoSale p,
 .CatPhoto p,
 .OtherWorks p {
   font-size: 20px;
+  padding: 0 15px;
 }
 
 .PhotoSale a,
 .CatPhoto a {
   text-decoration: none;
-  color: red;
+  color: #aed4ff;
   font-size: 20px;
 }
 
 .PhotoSale a:hover,
 .CatPhoto a:hover {
-  color: #0c74eb;
+  color: #b2ffc3;
+}
+
+@media (max-width: 720px) {
+  .PhotoSale,
+  .OtherWorks,
+  .CatPhoto {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: center;
+  }
+
+  .PhotoSale img,
+  .CatPhoto img,
+  .OtherWorks img {
+    width: 80%;
+    padding: 10px 0;
+  }
 }
